RESOLVED FIXED52938
Inconsistent handling of no-break space in justification logic
https://bugs.webkit.org/show_bug.cgi?id=52938
Summary Inconsistent handling of no-break space in justification logic
mitz
Reported 2011-01-21 16:43:13 PST
In the attached test case, the squares on the first line should be aligned with their counterparts on the third line. They are not, because RenderBlock::computeInlineDirectionPositionsForLine() counts only ' ', '\t' and '\n' as spaces, whereas WidthIterator also counts no-break space as a space (using Font::treatAsSpace()).
Attachments
Test case (223 bytes, text/html)
2011-01-21 16:43 PST, mitz
no flags
Count no-break space as a space when distributing justification padding to text boxes on a line (20.45 KB, patch)
2011-01-21 17:22 PST, mitz
adele: review+
mitz
Comment 1 2011-01-21 16:43:35 PST
Created attachment 79809 [details] Test case
mitz
Comment 2 2011-01-21 17:22:56 PST
Created attachment 79813 [details] Count no-break space as a space when distributing justification padding to text boxes on a line
mitz
Comment 3 2011-01-21 17:31:31 PST
Ryosuke Niwa
Comment 4 2011-01-21 17:33:49 PST
mitz
Comment 5 2011-01-21 17:35:50 PST
(In reply to comment #4) > Is this bug related to https://bugs.webkit.org/show_bug.cgi?id=38902 ? Hardly.
WebKit Review Bot
Comment 6 2011-01-21 18:01:10 PST
http://trac.webkit.org/changeset/76414 might have broken Qt Linux Release The following tests are not passing: fast/text/justify-nbsp.html
mitz
Comment 8 2011-01-21 19:13:05 PST
Sorry about that. I think I accidentally checked in a contenteditable version of the test with result from a non-editable version or vice versa.
mitz
Comment 9 2011-01-21 19:23:05 PST
Committed revision 76421.
Note You need to log in before you can comment on or make changes to this bug.