Inconsistent handling of no-break space in justification logic https://bugs.webkit.org/show_bug.cgi?id=52938

Reviewed by Adele Peterson.

Source/WebCore: 

Test: fast/text/justify-nbsp.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::computeInlineDirectionPositionsForLine): Count no-break space as a
space when computing the distribution of space between text boxes on the line.

LayoutTests: 

* fast/text/justify-nbsp-expected.checksum: Added.
* fast/text/justify-nbsp-expected.png: Added.
* fast/text/justify-nbsp-expected.txt: Added.
* fast/text/justify-nbsp.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@76414 bbb929c8-8fbe-4397-9dbb-9b2b20218538