third_party/WebKit/Source/WebCore/rendering/RenderBlockLineLayout.cpp
@@ -326,7 +326,7 @@ void RenderBlock::computeInlineDirectionPositionsForLine(RootInlineBox* lineBox,
                 const UChar* characters = rt->characters();
                 for (int i = r->m_start; i < r->m_stop; i++) {
                     UChar c = characters[i];
-                    if (c == ' ' || c == '\n' || c == '\t')
+                    if (Font::treatAsSpace(c))
                         numSpaces++;
                 }
             }
@@ -448,7 +448,7 @@ void RenderBlock::computeInlineDirectionPositionsForLine(RootInlineBox* lineBox,
                 const UChar* characters = toRenderText(r->m_object)->characters();
                 for (int i = r->m_start; i < r->m_stop; i++) {
                     UChar c = characters[i];
-                    if (c == ' ' || c == '\n' || c == '\t')
+                    if (Font::treatAsSpace(c))
                         spaces++;
                 }
 
